Minor fixes (#152)
- Metadata permission removal
- Eliminate web metadata menu
- Web page detail fixes
- Metadata fixes
- New web menu item structure
- Minor UI fixes, MCE fixes
- Public api fixes
- Package updates
